// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriestCard element should render a card with noData label when the qualification is empty 1`] = `
<div
  className="ui fluid card"
  onClick={[Function]}
>
  <div
    className="content"
  >
    <div
      className="content"
    >
      <button
        className="ui red icon inverted right floated button"
        id="deleteButton"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="trash icon"
          onClick={[Function]}
        />
      </button>
    </div>
    <div
      className="description"
    >
      <div
        className="ui list"
        role="list"
      >
        <div
          className="item"
          onClick={[Function]}
          role="listitem"
        >
          <form
            className="ui form"
            onSubmit={[Function]}
          >
            <div
              className="inline field"
            >
              <b>
                Diploma name
                :
              </b>
               
              <div
                className="ui small fluid input"
              >
                <input
                  onChange={[Function]}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </form>
        </div>
        <div
          className="item"
          onClick={[Function]}
          role="listitem"
        >
          <form
            className="ui form"
            onSubmit={[Function]}
          >
            <div
              className="inline field"
            >
              <b>
                Genesis date
                :
              </b>
               
              <form
                className="ui form"
                onSubmit={[Function]}
              >
                <div
                  className="inline unstackable fields"
                  style={
                    Object {
                      "marginBottom": "-2px",
                    }
                  }
                >
                  <div
                    className="field"
                  >
                    <b
                      style={Object {}}
                    >
                      year
                    </b>
                    <div
                      className="ui fluid input"
                      style={
                        Object {
                          "width": "6em",
                        }
                      }
                    >
                      <input
                        id=""
                        name="year"
                        onChange={[Function]}
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="field"
                  >
                    <b
                      style={Object {}}
                    >
                      month
                    </b>
                    <div
                      className="ui fluid input"
                      style={
                        Object {
                          "width": "5em",
                        }
                      }
                    >
                      <input
                        id=""
                        name="month"
                        onChange={[Function]}
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="field"
                  >
                    <b
                      style={Object {}}
                    >
                      day
                    </b>
                    <div
                      className="ui fluid input"
                      style={
                        Object {
                          "width": "5em",
                        }
                      }
                    >
                      <input
                        id=""
                        name="day"
                        onChange={[Function]}
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="field"
                >
                  <i
                    style={
                      Object {
                        "color": "gray",
                      }
                    }
                  >
                    comment about date (optional)
                  </i>
                  <div
                    className="ui fluid input"
                  >
                    <input
                      id="grey"
                      name="comment"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </form>
            </div>
          </form>
        </div>
        <div
          className="item"
          onClick={[Function]}
          role="listitem"
        >
          <form
            className="ui form"
            onSubmit={[Function]}
          >
            <div
              className="inline field"
            >
              <b>
                Issuing Authority
                :
              </b>
               
              <div
                className="ui small fluid input"
              >
                <input
                  onChange={[Function]}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PriestCard element should render a card with the qualification data 1`] = `
<div
  className="ui fluid card"
  onClick={[Function]}
>
  <div
    className="content"
  >
    <div
      className="content"
    >
      <button
        className="ui red icon inverted right floated button"
        id="deleteButton"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="trash icon"
          onClick={[Function]}
        />
      </button>
    </div>
    <div
      className="description"
    >
      <div
        className="ui list"
        role="list"
      >
        <div
          className="item"
          onClick={[Function]}
          role="listitem"
        >
          <form
            className="ui form"
            onSubmit={[Function]}
          >
            <div
              className="inline field"
            >
              <b>
                Diploma name
                :
              </b>
               
              <div
                className="ui small fluid input"
              >
                <input
                  onChange={[Function]}
                  type="text"
                  value="Erettsegi bizonyitvany"
                />
              </div>
            </div>
          </form>
        </div>
        <div
          className="item"
          onClick={[Function]}
          role="listitem"
        >
          <form
            className="ui form"
            onSubmit={[Function]}
          >
            <div
              className="inline field"
            >
              <b>
                Genesis date
                :
              </b>
               
              <form
                className="ui form"
                onSubmit={[Function]}
              >
                <div
                  className="inline unstackable fields"
                  style={
                    Object {
                      "marginBottom": "-2px",
                    }
                  }
                >
                  <div
                    className="field"
                  >
                    <b
                      style={Object {}}
                    >
                      year
                    </b>
                    <div
                      className="ui fluid input"
                      style={
                        Object {
                          "width": "6em",
                        }
                      }
                    >
                      <input
                        id=""
                        name="year"
                        onChange={[Function]}
                        type="number"
                        value={2000}
                      />
                    </div>
                  </div>
                  <div
                    className="field"
                  >
                    <b
                      style={Object {}}
                    >
                      month
                    </b>
                    <div
                      className="ui fluid input"
                      style={
                        Object {
                          "width": "5em",
                        }
                      }
                    >
                      <input
                        id=""
                        name="month"
                        onChange={[Function]}
                        type="number"
                        value={6}
                      />
                    </div>
                  </div>
                  <div
                    className="field"
                  >
                    <b
                      style={Object {}}
                    >
                      day
                    </b>
                    <div
                      className="ui fluid input"
                      style={
                        Object {
                          "width": "5em",
                        }
                      }
                    >
                      <input
                        id=""
                        name="day"
                        onChange={[Function]}
                        type="number"
                        value={6}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="field"
                >
                  <i
                    style={
                      Object {
                        "color": "gray",
                      }
                    }
                  >
                    comment about date (optional)
                  </i>
                  <div
                    className="ui fluid input"
                  >
                    <input
                      id="grey"
                      name="comment"
                      onChange={[Function]}
                      type="text"
                      value="2000.06.06"
                    />
                  </div>
                </div>
              </form>
            </div>
          </form>
        </div>
        <div
          className="item"
          onClick={[Function]}
          role="listitem"
        >
          <form
            className="ui form"
            onSubmit={[Function]}
          >
            <div
              className="inline field"
            >
              <b>
                Issuing Authority
                :
              </b>
               
              <div
                className="ui small fluid input"
              >
                <input
                  onChange={[Function]}
                  type="text"
                  value="Felso Oktatasi Intezmeny"
                />
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
